# tls_sys_api

./: .gitignore  README.md  conanfile.py  readme.md  sample_sink.conanfile.py  tls_client.conanfile.py  tls_server.conanfile.py  version.md
tlsAPI-WS/: .clang-format  CMakeLists.txt  README.md  arm.cmake
tlsAPI-WS/auxiliary_files/: ECC_CLIENT.key  ECC_CLIENT.key_orig  ECC_CLIENT.pem  ECC_CLIENT_ID.csr  ECCca.key  ECCca.pem  README.txt  VKMS_ECU_BASE_CERT.pem  VKMS_ECU_BASE_KEY_NEW.pem  client-ca.crt  client-ca.key  client-ca.pem  csr2.csr  domains.tsv  keys.tsv  keys_DlcDownload.tsv  ocspSigned.crt  ocspSigning.crt  ocspSigning.key  public.key  server_usage_guide.txt  user.crt  user.key  user_corrupt.crt  user_key.key  user_key_bad.pem  user_key_to_use.pem  user_pem.pem
tlsAPI-WS/auxiliary_files/WebRadioRootCA/: AC Camerfirma, S.A._Global Chambersign Root - 2008.pem  Asseco Data Systems S.A. (previously Unizeto Certum)_Certum CA.pem  DigiCert_Baltimore CyberTrust Root.pem  DigiCert_DigiCert Assured ID Root CA.pem  GlobalSign nv-sa_GlobalSign Root CA.pem  GlobalSign nv-sa_GlobalSign.pem  GoDaddy_Go Daddy Class 2 CA.pem  GoDaddy_Starfield Class 2 CA.pem  GoDaddy_Starfield Root Certificate Authority - G2.pem  IdenTrust Services, LLC_DST Root CA X3.pem  QuoVadis_QuoVadis Root CA 2 G3.pem  SECOM Trust Systems CO., LTD._Security Communication RootCA2.pem  ca.pem  testRootCA.pem
tlsAPI-WS/auxiliary_files/demoCA/: cacert.prm  index.txt  index.txt.old
tlsAPI-WS/auxiliary_files/demoCA/newcerts/: 02.pem  03.pem
tlsAPI-WS/auxiliary_files/demoCA/private/: cakey.pem
tlsAPI-WS/auxiliary_files/server_creds/: myCA.pem  myCA.srl  myCA_nopass.key  server.crt  server.csr  server.key  server.pem
tlsAPI-WS/cmake/: Findsysapi_log.cmake  arm_linux_botan.cmake  botan.cmake  botanConfig.cmake.in  code_analysis.cmake  common_config.cmake  doxygen.cmake  gcov.cmake
tlsAPI-WS/deploy/: deploy.sh
tlsAPI-WS/doc/: tlsapi_component_tests_report_2023-01-01_16-26-03.html
tlsAPI-WS/test/: CMakeLists.txt
tlsAPI-WS/test/gcov/html_output/: index.TLSLibApi_TLSLibApi.cpp.html  index.TLSSessionEndpoint_TLSSessionEndpointImpl.cpp.html  index.TLSSocketFactory_TLSSocketFactoryImpl.cpp.html  index.TLSSocketFactory_include_TLSSocketFactoryImpl.hpp.html  index.TLSSocket_TLSClientSocket_Cert_TLSClientCertImpl.cpp.html  index.TLSSocket_TLSClientSocket_PSK_TLSClientSocketImpl.cpp.html  index.TLSSocket_TLSServerSocket_PSK_TLSServerSocketImpl.cpp.html  index.engines_TLSCertEngine.cpp.html  index.engines_TLSEngine.cpp.html  index.engines_botan_Cert_BotanCertEngine.cpp.html  index.engines_botan_Cert_include_BotanCertEngine.hpp.html  index.engines_botan_PSK_BotanPSKEngine.cpp.html  index.engines_botan_PSK_include_BotanPSKEngine.hpp.html  index.engines_include_ITLSEngine.hpp.html  index.engines_include_TLSCertEngine.hpp.html  index.engines_wolfssl_Cert_WolfSSLCertEngine.cpp.html  index.engines_wolfssl_PSK_WolfSSLPSKEngine.cpp.html  index.engines_wolfssl_include_WolfSSLCommon.hpp.html  index.html  index.streams_InternIOStream_InternIOStream.cpp.html  index.streams_InternIOStream_ThreadManager.cpp.html  index.streams_InternIOStream_include_InternIOStream.hpp.html  index.streams_UserIOStream_UserIOStream.cpp.html  index.streams_UserIOStream_include_UserIOStream.hpp.html  index.streams_include_IOStreamIf.hpp.html  index.streams_inetaddr_IPInetAddressImpl.cpp.html  index.streams_inetaddr_InetAddressFactory.cpp.html  index.streams_inetaddr_include_IPInetAddressImpl.hpp.html
tlsAPI-WS/test/gcov/scripts/: InstallGcovr.sh  weasyprint
tlsAPI-WS/test/sampels/: CMakeLists.txt
tlsAPI-WS/test/sampels/mid_demo/: CMakeLists.txt  MidDemo.cpp
tlsAPI-WS/test/testSuite/: CMakeLists.txt  README.md
tlsAPI-WS/test/testSuite/psk/: CMakeLists.txt  README.md  psk.cpp  run_test_suite.py  server_client_input.ini
tlsAPI-WS/test/testSuite/psk_stream_test/: CMakeLists.txt  README.md  psk_test_thread.cpp  run_test_suite.py  server_client_input.ini
tlsAPI-WS/test/testSuite/tls_api_boxtester/: CMakeLists.txt  README.md  dhparams.pem  globals.py  main.py
tlsAPI-WS/test/tlsMidDemo/: CMakeLists.txt  tlsMidDemo.cpp
tlsAPI-WS/test/tlsMidDemo/deploy/: deploy.sh
tlsAPI-WS/test/tlsSimpleSample/: CMakeLists.txt
tlsAPI-WS/test/tlsSimpleSample/src/: WaitableQueue.cpp  WaitableQueue.h  client_cert.cpp  client_cert_alpn.cpp  client_cert_mocktee.cpp  client_psk.cpp  client_psk_DEMO.cpp  server.cpp  server_DEMO.cpp  wolfssl_cert_server.cpp
tlsAPI-WS/test/unit/: CMakeLists.txt  gtest_main.cpp
tlsAPI-WS/test/unit/TLSSessionEndpoint/: TLSSessionEndpointImplTest.cpp
tlsAPI-WS/test/unit/TLSSocketFactory/: TLSSocketFactoryImplTest.cpp
tlsAPI-WS/test/unit/engines/: BotanCertEngineTest.cpp  BotanPSKEngineTest.cpp  EngineCommonMockCaller.cpp  TLSCertEngineTest.cpp  TLSEngineTest.cpp  TLSReturnCodeTest.cpp  WolfSSLCertEngineTest.cpp  WolfSSLCommonTest.cpp  WolfSSLMockCaller.cpp  WolfSSLPSKEngineTest.cpp
tlsAPI-WS/test/unit/mock/: HelperMock.cpp  MockBotanCertEngine.hpp  MockBotanChannel.hpp  MockCertEngine.hpp  MockEngineCommon.hpp  MockIOStreamIf.hpp  MockInternIOStream.hpp  MockPSKEngine.hpp  (+5 more)
tlsAPI-WS/tlsAPI/doxygen/: TLSStreamAndSocketAPI.doxyfile  mainTLSStreamAndSocketAPI.dox
tlsAPI-WS/tlsAPI/includes/: CipherSuitesDefenitions.h  IOStream.h  InetAddress.h  TLSApiTypes.h  TLSCertStore.h  TLSLibApi.h  TLSResult.h  TLSReturnCodes.h  TLSSession.h  TLSSocketFactory.h  TLSSockets.h  vwgtypes.h
tlsAPI-WS/tlsLibImpl/: CMakeLists.txt
tlsAPI-WS/tlsLibImpl/TLSLibApi/: TLSLibApi.cpp
tlsAPI-WS/tlsLibImpl/TLSSessionEndpoint/: CMakeLists.txt  TLSSessionEndpointImpl.cpp
tlsAPI-WS/tlsLibImpl/TLSSocket/: CMakeLists.txt
tlsAPI-WS/tlsLibImpl/TLSSocketFactory/: CMakeLists.txt  TLSSocketFactoryImpl.cpp
tlsAPI-WS/tlsLibImpl/common/: CMakeLists.txt  Globals.cpp  Logger.cpp  engineCommon.cpp
tlsAPI-WS/tlsLibImpl/config/: nginx.conf.mutual  nginx.conf.single_sided
tlsAPI-WS/tlsLibImpl/engines/: CMakeLists.txt  TLSCertEngine.cpp  TLSEngine.cpp
tlsAPI-WS/tlsLibImpl/ext/: CMakeLists.txt
tlsAPI-WS/tlsLibImpl/streams/: CMakeLists.txt
(+141 files in other folders)
